--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     width: 100%;
-    background: #280E53;
+    background: #17013E;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
