--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -1,4 +1,8 @@
-.Logo img{
-    scale: 120%;
+.Logo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
