--- a/src/components/hurTitle.css
+++ b/src/components/hurTitle.css
@@ -241,6 +241,7 @@
         background-position: 80% 0%;
         width: 100%;
         height: 100%;
+        background-size: 90%;
     }
     .wcRentTitle{
         background-position: 50% 50%;
