--- a/src/components/hurJunior.css
+++ b/src/components/hurJunior.css
@@ -7,6 +7,10 @@
     width: 100%;
 }
 
+#mobileText{
+    display: none;
+}
+
 .juniorHeader{
     width: 100%;
 }
@@ -182,6 +186,15 @@
 }
 
 @media screen and (max-width: 950px){
+
+
+#mobileText{
+    display: flex;
+}
+
+#pcText{
+    display: none;
+}
 
 .juniorAll{
     width: 80%;
