--- a/src/grafikaPage.css
+++ b/src/grafikaPage.css
@@ -1,6 +1,6 @@
 .onlinePage{
     background-image: url(./components/images/portfolio/grafikaBG.png);
-    background-position: right;
+    background-position: 800% 50%;
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
