--- a/src/grafikaPage.css
+++ b/src/grafikaPage.css
@@ -1,9 +1,7 @@
 .onlinePage{
     background-image: url(./components/images/portfolio/grafikaBG.png);
-    background-position: 800% 50%;
+    background-position: 35rem;
     background-repeat: no-repeat;
-    height: 100%;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,10 +17,11 @@
     width: fit-content;
     margin-left: 85px;
     margin-right: 85px;
+    align-self: center;
 }
 
 .onlinePageContent h1{
-    align-self: flex-start;
+    align-self: center;
 }
 
 .onlinePageContentImages{
@@ -45,7 +44,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 25px;
     margin-top: 55px;
 }
@@ -60,7 +59,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: flex-start;
     gap: 25px;
     margin-top: 55px;
 }
